[package]
name = "factory-btlx"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "BTLx timber-CNC toolkit — serialiser + inspector CLI, and a Hundegger machine driver for factory-gateway (factory-machine-model MachineDriver)"
repository = "https://github.com/joeblew999/factory-btlx"

[dependencies]
factory-machine-model = { git = "https://github.com/joeblew999/factory-machine-model" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["fs", "process", "time", "rt", "macros"] }
tracing = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "rt", "macros", "rt-multi-thread"] }
